# CppProjectTemplate

./: .clang-format  .clang-tidy  .cppcheck-suppress  .gitignore  CMakeLists.txt  README.md  cppcheck.suppress
.github/workflows/: ci.yml  cmake.yml
apps/: CMakeLists.txt  application.cpp
cmake/: StaticAnalyzers.cmake
include/arg/: ArgumentParser.hpp  HelpFormatter.hpp  Option.hpp  ParseError.hpp  format.h  option.h  options.h  parse.h
include/project/: Sample.h  arguments.h  factorial.h  factorial.hpp
src/: CMakeLists.txt
src/arg/: ArgumentParser.cpp  HelpFormatter.cpp  format.cpp  option.cpp  parse.cpp
src/project/: Sample.cpp  arguments.cpp  factorial.cpp
tests/: CMakeLists.txt
tests/arg/: ArgumentParser.test.cpp  HelpFormatter.test.cpp  arguments_test.cpp  stringConcatenation.test.cpp
tests/project/: arguments.cpp  factorial.cpp  factorial.test.cpp  stringConcatenation.test.cpp
